reparcion de normas y galeria

--- a/ExamenWeb3erBi_Rev/html/pipipi.html
+++ b/ExamenWeb3erBi_Rev/html/pipipi.html
@@ -79,11 +79,11 @@
     </div>
 
     <div class="pie">
-        <a class="btn btn-outline-light" href="../html/html.html">Previus</a>
+        <a class="btn btn-outline-light" href="../html/html.html">Normativas</a>
         <div>
             <em><p>Si eres víctima de violencia o conoces a alguien que lo sea, por favor busca ayuda.</p></em>
         </div>
-        <a class="btn btn-outline-light disabled" href="../html/pipipi.html">Next</a>
+        <a class="btn btn-outline-light" href="../INDEX.HTML">Inicio</a>
     </div>
     <script src="../bootstrap/js/bootstrap.min.js"></script>
 
