--- a/ExamenWeb3erBi_Rev/html/html.html
+++ b/ExamenWeb3erBi_Rev/html/html.html
@@ -78,13 +78,68 @@
             <img src="../img/e1.jpg" alt="..." class="card-img-top img-fluid mx-auto d-block">
             <div class="card-body text-center">
               <h3>Educación y Concienciación</h3>
-              <p class="card-text">Texto corto.</p>
+              <p class="card-text">Crear conciencia sobre la importancia de prevenir la violencia infantil a través de
+                campañas educativas y de sensibilización dirigidas a padres, cuidadores, maestros y la comunidad en
+                general.
+                Proporcionar información sobre los efectos a largo plazo de la violencia en la infancia en el desarrollo
+                físico, emocional y social de los niños.
+              </p>
             </div>
           </div>
         </div>
         <div class="col-md-3 mb-4">
           <div class="card d-flex flex-column h-100 align-items-center">
-            <img src="../img/e1.jpg" alt="..." class="card-img-top img-fluid mx-auto d-block">
+            <img src="../img/a.png" alt="..." class="card-img-top img-fluid mx-auto d-block">
+            <div class="card-body text-center">
+              <h3>Promoción de la Parentalidad Positiva</h3>
+              <p class="card-text">Ofrecer programas de apoyo a los padres para enseñarles habilidades de crianza
+                efectivas y no violentas.
+                Fomentar la comunicación abierta y el apoyo emocional entre padres e hijos.
+              </p>
+            </div>
+          </div>
+        </div>
+        <div class="col-md-3 mb-4">
+          <div class="card d-flex flex-column h-100 align-items-center">
+            <img src="../img/iden.jpeg" alt="..." class="card-img-top img-fluid mx-auto d-block">
+            <div class="card-body text-center">
+              <h3>Identificación y Denuncia</h3>
+              <p class="card-text">Establecer sistemas efectivos para la identificación y denuncia de casos de violencia
+                infantil, ya sea en el ámbito familiar , escolar o comunitario.
+                Garantizar la confidencialidad y la protección de quienes denuncian.
+              </p>
+            </div>
+          </div>
+        </div>
+        <div class="col-md-3 mb-4">
+          <div class="card d-flex flex-column h-100 align-items-center">
+            <img src="../img/Forma.jpg" alt="..." class="card-img-top img-fluid mx-auto d-block">
+            <div class="card-body text-center">
+              <h3>Formación para Profesionales</h3>
+              <p class="card-text">Capacitar a profesionales de la salud, la educación y el trabajo social para
+                identificar signos de abuso y proporcionar apoyo a las víctimas y sus familias.
+                Asegurar que los profesionales conozcan sus obligaciones legales en relación con la denuncia de casos de
+                violencia infantil.
+              </p>
+            </div>
+          </div>
+        </div>
+        <div class="col-md-3 mb-4">
+          <div class="card d-flex flex-column h-100 align-items-center">
+            <img src="../img/call.png" alt="..." class="card-img-top img-fluid mx-auto d-block">
+            <div class="card-body text-center">
+              <h3>Acceso a Servicios de Apoyo</h3>
+              <p class="card-text">Facilitar el acceso de las víctimas a servicios de apoyo, como asesoramiento
+                psicológico, atención médica y servicios legales.
+                Garantizar que haya recursos adecuados disponibles para ayudar a las víctimas y sus familias a superar
+                los efectos de la violencia.
+              </p>
+            </div>
+          </div>
+        </div>
+        <div class="col-md-3 mb-4">
+          <div class="card d-flex flex-column h-100 align-items-center">
+            <img src="../img/paren.webp" alt="..." class="card-img-top img-fluid mx-auto d-block">
             <div class="card-body text-center">
               <h3>Promoción de la Parentalidad Positiva</h3>
               <p class="card-text">Texto más largo que puede ocupar más espacio en la caja.</p>
@@ -93,46 +148,14 @@
         </div>
         <div class="col-md-3 mb-4">
           <div class="card d-flex flex-column h-100 align-items-center">
-            <img src="../img/e1.jpg" alt="..." class="card-img-top img-fluid mx-auto d-block">
+            <img src="../img/por.jpeg" alt="..." class="card-img-top img-fluid mx-auto d-block">
             <div class="card-body text-center">
-              <h3>Promoción de la Parentalidad Positiva</h3>
-              <p class="card-text">Texto más largo que puede ocupar más espacio en la caja.</p>
-            </div>
-          </div>
-        </div>
-        <div class="col-md-3 mb-4">
-          <div class="card d-flex flex-column h-100 align-items-center">
-            <img src="../img/e1.jpg" alt="..." class="card-img-top img-fluid mx-auto d-block">
-            <div class="card-body text-center">
-              <h3>Promoción de la Parentalidad Positiva</h3>
-              <p class="card-text">Texto más largo que puede ocupar más espacio en la caja.</p>
-            </div>
-          </div>
-        </div>
-        <div class="col-md-3 mb-4">
-          <div class="card d-flex flex-column h-100 align-items-center">
-            <img src="../img/e1.jpg" alt="..." class="card-img-top img-fluid mx-auto d-block">
-            <div class="card-body text-center">
-              <h3>Promoción de la Parentalidad Positiva</h3>
-              <p class="card-text">Texto más largo que puede ocupar más espacio en la caja.</p>
-            </div>
-          </div>
-        </div>
-        <div class="col-md-3 mb-4">
-          <div class="card d-flex flex-column h-100 align-items-center">
-            <img src="../img/e1.jpg" alt="..." class="card-img-top img-fluid mx-auto d-block">
-            <div class="card-body text-center">
-              <h3>Promoción de la Parentalidad Positiva</h3>
-              <p class="card-text">Texto más largo que puede ocupar más espacio en la caja.</p>
-            </div>
-          </div>
-        </div>
-        <div class="col-md-3 mb-4">
-          <div class="card d-flex flex-column h-100 align-items-center">
-            <img src="../img/e1.jpg" alt="..." class="card-img-top img-fluid mx-auto d-block">
-            <div class="card-body text-center">
-              <h3>Promoción de la Parentalidad Positiva</h3>
-              <p class="card-text">Texto más largo que puede ocupar más espacio en la caja.</p>
+              <h3>Políticas y Legislación</h3>
+              <p class="card-text">Desarrollar y aplicar políticas y leyes que protejan a los niños contra la violencia
+                y sancionen a los agresores.
+                Trabajar en la prevención a nivel gubernamental, promoviendo medidas legislativas y programas
+                específicos.
+              </p>
             </div>
           </div>
         </div>
@@ -146,125 +169,28 @@
           </div>
         </div>
       </div>
+
+      <p class="text-center">
+        La prevención contra la violencia infantil es un esfuerzo conjunto que involucra a la sociedad en su conjunto para
+        garantizar un entorno
+        seguro y saludable para todos los niños. Es importante que las comunidades, los gobiernos, las organizaciones no
+        gubernamentales y las
+        familias trabajen juntos para prevenir la violencia infantil y proteger los derechos de los niños.
+      </p>
+    <footer class="mt-auto text-white-50">
+      <div class="pie">
+        <a class="btn btn-outline-light" href="../html/galeria.html">Galería</a>
+        <a class="btn btn-outline-light" href="../html/pipipi.html">Derechos</a>
+      </div>
+  
+    </footer>
     </div>
-    
+
 
     <!-- Fin cajas -->
 
 
-  </div>
-  <div class="eee">
-    <h3>Educación y Concienciación</h3>
-    <ul>
-      <li>Crear conciencia sobre la importancia de prevenir la violencia infantil a través de campañas educativas y de
-        sensibilización
-        dirigidas a padres, cuidadores, maestros y la comunidad en general.</li>
-      <li>Proporcionar información sobre los efectos a largo plazo de la violencia en la infancia en el desarrollo
-        físico, emocional
-        y social de los niños.</li>
-    </ul>
-
-  </div>
-
-  <div class=" eee">
-    <h3>Promoción de la Parentalidad Positiva</h3>
-    <ul>
-      <li>Ofrecer programas de apoyo a los padres para enseñarles habilidades de crianza efectivas y no violentas.</li>
-      <li>Fomentar la comunicación abierta y el apoyo emocional entre padres e hijos.</li>
-    </ul>
-
-  </div>
-  <center> <img class="img" src="../img/e1.jpg" alt=""></center>
-  <div class=" eee">
-    <h3>Identificación y Denuncia</h3>
-    <ul>
-      <li>Establecer sistemas efectivos para la identificación y denuncia de casos de violencia infantil, ya sea en el
-        ámbito familiar
-        , escolar o comunitario.</li>
-      <li>Garantizar la confidencialidad y la protección de quienes denuncian.</li>
-    </ul>
-
-  </div>
-  <div class=" eee">
-    <h3>Formación para Profesionales</h3>
-    <ul>
-      <li>Capacitar a profesionales de la salud, la educación y el trabajo social para identificar signos de abuso y
-        proporcionar apoyo
-        a las víctimas y sus familias.</li>
-      <li>Asegurar que los profesionales conozcan sus obligaciones legales en relación con la denuncia de casos de
-        violencia infantil.</li>
-    </ul>
-  </div>
-  <center> <img class="img" src="../img/s.jpg" alt=""></center>
-  <div class=" eee">
-    <h3>Acceso a Servicios de Apoyo</h3>
-    <ul>
-      <li>Facilitar el acceso de las víctimas a servicios de apoyo, como asesoramiento psicológico, atención médica y
-        servicios legales.</li>
-      <li>Garantizar que haya recursos adecuados disponibles para ayudar a las víctimas y sus familias a superar los
-        efectos de la violencia.</li>
-    </ul>
-  </div>
-  <div class=" eee">
-    <h3>Políticas y Legislación</h3>
-    <ul>
-      <li>Desarrollar y aplicar políticas y leyes que protejan a los niños contra la violencia y sancionen a los
-        agresores.</li>
-      <li>Trabajar en la prevención a nivel gubernamental, promoviendo medidas legislativas y programas específicos.
-      </li>
-    </ul>
-  </div>
-  <center> <img class="img" src="../img/a.png" alt=""></center>
-  <div class=" eee">
-    <h3>Promoción de un Entorno Seguro</h3>
-    <ul>
-      <li>Fomentar la creación de entornos seguros y protectores para los niños en sus hogares, escuelas y comunidades.
-      </li>
-      <li>Establecer protocolos de seguridad en instituciones donde los niños pasan tiempo, como escuelas y centros de
-        cuidado infantil.</li>
-    </ul>
-  </div>
-
-  <div class=" eee">
-    <h3>Participación de la Comunidad</h3>
-    <ul>
-      <li>Involucrar a la comunidad en la prevención de la violencia infantil a través de programas de participación
-        ciudadana y apoyo mutuo.</li>
-      <li>Promover la responsabilidad compartida en la protección de los niños.</li>
-    </ul>
-  </div>
-  <center> <img class="img" src="../img/R.png" alt=""></center>
-  <div class=" eee">
-    <h3>Monitoreo y Evaluación</h3>
-    <ul>
-      <li>Realizar seguimiento y evaluación constante de las políticas y programas de prevención para medir su
-        efectividad y realizar mejoras.</li>
-    </ul>
-  </div>
-  <div class=" eee">
-    <h3>Sensibilización en Internet y Redes Sociales</h3>
-    <ul>
-      <li>Educar a padres y niños sobre los riesgos asociados a las actividades en línea y el ciberacoso, promoviendo un
-        uso seguro de Internet.</li>
-    </ul>
-  </div>
-
-
-  <p>
-    La prevención contra la violencia infantil es un esfuerzo conjunto que involucra a la sociedad en su conjunto para
-    garantizar un entorno
-    seguro y saludable para todos los niños. Es importante que las comunidades, los gobiernos, las organizaciones no
-    gubernamentales y las
-    familias trabajen juntos para prevenir la violencia infantil y proteger los derechos de los niños.
-  </p>
-
-
-  </div>
-
-  <div class="pie">
-    <a class="btn btn-outline-light" href="../html/galeria.html">Previus</a>
-    <a class="btn btn-outline-light" href="../html/pipipi.html">Next</a>
-  </div>
+    
 
 
 </body>
