--- a/ExamenWeb3erBi_Rev/html/pipipi.html
+++ b/ExamenWeb3erBi_Rev/html/pipipi.html
@@ -1,43 +1,47 @@
 <!DOCTYPE html>
 <html>
+
 <head>
-    <meta charset="UTF-8">
-    <title>Footer contra la Violencia</title>
-    <!-- Agrega los enlaces a los archivos CSS de Bootstrap -->
-    <link rel="stylesheet" href="../bootstrap/css/bootstrap.min.css">
-    <link rel="stylesheet" href="../css/tamaño.css">
-    
+  <meta charset="UTF-8">
+  <title>Footer contra la Violencia</title>
+  <!-- Agrega los enlaces a los archivos CSS de Bootstrap -->
+  <link rel="stylesheet" href="../bootstrap/css/bootstrap.min.css">
+  <link rel="stylesheet" href="../css/tamaño.css">
+
 </head>
+
 <body>
-    <div class="barras_nav">
-        <nav class="navbar navbar-expand-lg justify-content-center color">
-          <div class="container-fluid">
-            <a class="navbar-brand" href="#"><img src="../img/logo.png" class="nav" alt=""></a>
-            <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
-              <span class="navbar-toggler-icon"></span>
-            </button>
-            <div class="collapse navbar-collapse" id="navbarNav">
-              <ul class="navbar-nav">
-                <li class="nav-item">
-                    <a class="nav-link" href="../INDEX.HTML"><em>Inicio</em></a>
-                </li>
-                <li class="nav-item">
-                    <a class="nav-link" href="../html/acerca.html"><em>Acerca de </em></a>
-                </li>
-                <li class="nav-item">
-                    <a class="nav-link" href="../html/galeria.html"><em>Galería de Imagenes</em></a>
-                </li>
-                <li class="nav-item">
-                    <a class="nav-link" href="../html/html.html"><em>Normativas y Leyes</em></a>
-                </li><li class="nav-item active">
-                    <a class="nav-link" href="#"><em>Derechos</em></a>
-                </li>
-              </ul>
-            </div>
-          </div>
-        </nav>
+  <div class="barras_nav">
+    <nav class="navbar navbar-expand-lg justify-content-center color">
+      <div class="container-fluid">
+        <a class="navbar-brand" href="#"><img src="../img/logo.png" class="nav" alt=""></a>
+        <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav"
+          aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+          <span class="navbar-toggler-icon"></span>
+        </button>
+        <div class="collapse navbar-collapse" id="navbarNav">
+          <ul class="navbar-nav">
+            <li class="nav-item">
+              <a class="nav-link" href="../INDEX.HTML"><em>Inicio</em></a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" href="../html/acerca.html"><em>Acerca de </em></a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" href="../html/galeria.html"><em>Galería de Imagenes</em></a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" href="../html/html.html"><em>Normativas y Leyes</em></a>
+            </li>
+            <li class="nav-item active">
+              <a class="nav-link" href="#"><em>Derechos</em></a>
+            </li>
+          </ul>
+        </div>
       </div>
-    <div class="contenedor">
+    </nav>
+  </div>
+  <!-- <div class="contenedor">
         <div id="carouselExampleIndicators" class="carousel slide">
             <div class="carousel-indicators">
               <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="0" class="active" aria-current="true" aria-label="Slide 1"></button>
@@ -76,16 +80,52 @@
               <span class="visually-hidden">Next</span>
             </button>
           </div>
+    </div> -->
+
+  <main class="container">
+    <div class="p-4 p-md-5 mb-2 rounded text-body-emphasis bg-body-secondary">
+      <div class="col-lg- px-0">
+        <h1 class="display-4 fst-italic">Defendiendo los Derechos de la Infancia en Bolivia</h1>
+        <p class="lead my-2">Únete a nuestra plataforma para promover y proteger los derechos fundamentales de los niños
+          en Bolivia, impulsando un cambio positivo y un futuro justo para las nuevas generaciones.</p>
+
+      </div>
     </div>
 
-    <div class="pie">
-        <a class="btn btn-outline-light" href="../html/html.html">Normativas</a>
-        <div>
-            <em><p>Si eres víctima de violencia o conoces a alguien que lo sea, por favor busca ayuda.</p></em>
+    <div class="row justify-content-center">
+      <div class="card border-primary col-md-4 mb-3" style="max-width: 18rem;">
+        <div class="card-body text-primary">
+          <h5 class="card-title">Derecho a la Educación Integral</h5>
+          <p class="card-text">Todos los niños tienen derecho a una educación de calidad que promueva su desarrollo integral y equidad.</p>
         </div>
-        <a class="btn btn-outline-light" href="../INDEX.HTML">Inicio</a>
+      </div>
+      <div class="card border-primary col-md-4 mb-3" style="max-width: 18rem;">
+        <div class="card-body text-primary">
+          <h5 class="card-title">Derecho a la Salud Infantil</h5>
+          <p class="card-text">Los niños tienen derecho a recibir atención médica y cuidado para garantizar su bienestar y salud óptima.</p>
+        </div>
+      </div>
+      <div class="card border-primary col-md-4 mb-3" style="max-width: 18rem;">
+        <div class="card-body text-primary">
+          <h5 class="card-title">Derecho a la Protección Infantil</h5>
+          <p class="card-text">Los niños tienen derecho a estar protegidos contra cualquier forma de abuso, explotación y discriminación.</p>
+        </div>
+      </div>
     </div>
-    <script src="../bootstrap/js/bootstrap.min.js"></script>
+    <!-- Final cartas -->
+
+  </main>
+  <div class="pie">
+    <a class="btn btn-outline-light" href="../html/html.html">Normativas</a>
+    <div>
+      <em>
+        <p>Si eres víctima de violencia o conoces a alguien que lo sea, por favor busca ayuda.</p>
+      </em>
+    </div>
+    <a class="btn btn-outline-light" href="../INDEX.HTML">Inicio</a>
+  </div>
+  <script src="../bootstrap/js/bootstrap.min.js"></script>
 
 </body>
+
 </html>
